Ovn bgp agent deployment

--- a/roles/create_vm/templates/kolla-node.xml.j2
+++ b/roles/create_vm/templates/kolla-node.xml.j2
@@ -1,4 +1,4 @@
-<domain type="kvm">
+<domain type="{{ libvirt_domain_type }}">
   <name>{{ node_name }}</name>
   <metadata>
     <libosinfo:libosinfo xmlns:libosinfo="http://libosinfo.org/xmlns/libvirt/domain/1.0">
